# sockify

./: .clang-format  .clang-tidy  .codecov.yml  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  DESIGN.md  README.md
.github/workflows/: hygiene-check.yml  multi-build-test.yml
cmake/: FindLibEvent.cmake  SockifyDependency.cmake
docs/: CMakeLists.txt  README.md  doxygen-mainpage.dox  doxygen.cfg.in
src/: CMakeLists.txt
src/sockify/cli/: main.cpp
src/sockify/include/: address.hpp  buffer.hpp  config.hpp  config.hpp.in  datagram_socket.hpp  error.hpp  ipvx_address.hpp  seqpacket_socket.hpp  socket.hpp  stream_socket.hpp  unix_address.hpp
src/sockify/lib/: address.cpp  datagram_socket.cpp  entry.cpp  error.cpp  ipvx_address.cpp  seqpacket_socket.cpp  socket.cpp  stream_socket.cpp  unix_address.cpp
tests/: CMakeLists.txt  test_address.cpp  test_buffer.cpp  test_error.cpp  test_ipvx_address.cpp  test_main.cpp  test_socket.cpp  test_unix_address.cpp
